Added support for afterMethod event in plugins; Added support for DAV.Handler event on server when a jsDAVHandler is created (prior to handling request)

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "jsDAV",
-    "description": "jsDAV allows you to easily add WebDAV support to a NodeJS application. jsDAV is meant to cover the entire standard, and attempts to allow integration using an easy to understand API.",
-    "version": "0.1.1",
-    "homepage" : "http://github.com/mikedeboer/jsDAV",
+    "name": "jsDAV-wab",
+    "description": "A customized version of jsDAV not affiliated with ajax.org. jsDAV (from ajax.org) allows you to easily add WebDAV support to a NodeJS application. jsDAV is meant to cover the entire standard, and attempts to allow integration using an easy to understand API.",
+    "version": "0.1.1-1",
+    "homepage" : "http://github.com/BillBarnhill/jsDAV",
     "engines": {"node": ">= 0.4.0"},
     "author": "Mike de Boer <info@mikedeboer.nl>",
-    "scripts": {"test": "node test/test_server.js"},
+     "scripts": {"test": "node test/test_server.js"},
     "main": "lib/jsdav",
     "repository" : {
         "type" : "git",
-         "url" : "http://github.com/mikedeboer/jsDAV.git"
+         "url" : "http:/github.com/BillBarnhill/jsDAV.git"
     },
     "licenses": [{
         "type": "The MIT License",
